@@ -1,10 +1,11 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
-  - Text::Parser::RuleSpec provides syntactical sugar to subclass Text::Parser
+  - Text::Parser::RuleSpec provides syntactical sugar to write rules for a subclass of Text::Parser
   - New attribute line_wrap_style, new method custom_line_unwrap_routines
   - Removed confusing POD documentation
   - Improved POD documentation to reflect latest features
+  - Improved the Text::Parser manual to be clear about comparison to AWK
 
 0.927     2019-06-22 20:35:56-07:00 America/Los_Angeles
   - Speed improvement: reduced runtime of read() calls to about 50% of original runtime.
